Fixed collapse issue with column icons on home page. Added loader to projects page.

--- a/css/layout.css
+++ b/css/layout.css
@@ -41,6 +41,38 @@ body
     color: white;
 }
 
+@keyframes rotate
+{
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
+}
+
+#loader-container
+{
+    width: 100%;
+    text-align: center;
+    position: relative;
+}
+
+#loader
+{
+    animation-name: rotate;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+.loading-circle
+{
+    background-color: white;
+    border: 1px solid grey;
+    border-radius: 50px;
+    width: 50px;
+    height: 50px;
+    margin: auto;
+}
+
+
 /* Bootstrap override: */
 .navbar
 {
